fixed the overlapping hero setions by placing the header above (z-depth)

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,13 +87,14 @@ img {
     top: 0;
     width: 100%;
     background-color: black;
+    z-index: 1000;
 }
 
 .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0 2rem;
 }
 
 .site-nav a {
